@@ -1,5 +1,5 @@
-# Copyright (c) 2002-2016 "Neo Technology,"
-# Network Engine for Objects in Lund AB [http://neotechnology.com]
+# Copyright (c) 2002-2020 "Neo4j,"
+# Neo4j Sweden AB [http://neo4j.com]
 #
 # This file is part of Neo4j.
 #
@@ -22,7 +22,7 @@
 Retrieves information about Java on the local machine to start Neo4j programs
 
 .DESCRIPTION
-Retrieves information about Java on the local machine to start Neo4j services and utilites, tailored to the type of Neo4j edition
+Retrieves information about Java on the local machine to start Neo4j services and utilities, tailored to the type of Neo4j edition
 
 .PARAMETER Neo4jServer
 An object representing a valid Neo4j Server object
@@ -31,7 +31,7 @@ An object representing a valid Neo4j Server object
 Retrieve the Java command line to start a Neo4j Server
 
 .PARAMETER ForUtility
-Retrieve the Java command line to start a Neo4j utility such as Neo4j Shell.
+Retrieve the Java command line to start a Neo4j utility such as Neo4j Admin.
 
 .PARAMETER StartingClass
 The name of the starting class when invoking Java
@@ -39,7 +39,7 @@ The name of the starting class when invoking Java
 .EXAMPLE
 Get-Java -Neo4jServer $serverObject -ForServer
 
-Retrieves the Java comamnd line to start the Neo4j server for the instance in $serverObject.
+Retrieves the Java command line to start the Neo4j server for the instance in $serverObject.
 
 .OUTPUTS
 System.Collections.Hashtable
@@ -48,29 +48,29 @@ System.Collections.Hashtable
 This function is private to the powershell module
 
 #>
-Function Get-Java
+function Get-Java
 {
-  [cmdletBinding(SupportsShouldProcess=$false,ConfirmImpact='Low',DefaultParameterSetName='Default')]
-  param (
-    [Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='UtilityInvoke')]
-    [Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='ServerInvoke')]
-    [PSCustomObject]$Neo4jServer
+  [CmdletBinding(SupportsShouldProcess = $false,ConfirmImpact = 'Low',DefaultParameterSetName = 'Default')]
+  param(
+    [Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'UtilityInvoke')]
+    [Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'ServerInvoke')]
+    [pscustomobject]$Neo4jServer
 
-    ,[Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='ServerInvoke')]
+    ,[Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'ServerInvoke')]
     [switch]$ForServer
 
-    ,[Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='UtilityInvoke')]
+    ,[Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'UtilityInvoke')]
     [switch]$ForUtility
 
-    ,[Parameter(Mandatory=$true,ValueFromPipeline=$false,ParameterSetName='UtilityInvoke')]
+    ,[Parameter(Mandatory = $true,ValueFromPipeline = $false,ParameterSetName = 'UtilityInvoke')]
     [string]$StartingClass
   )
 
-  Begin
+  begin
   {
   }
 
-  Process
+  process
   {
     $javaPath = ''
     $javaCMD = ''
@@ -82,8 +82,6 @@ Function Get-Java
     if (($javaPath -eq '') -and ($EnvJavaHome -ne $null))
     {
       $javaPath = $EnvJavaHome
-      # Modify the java path if a JRE install is detected
-      if (Test-Path -Path "$javaPath\bin\javac.exe") { $javaPath = "$javaPath\jre" }
     }
 
     # Attempt to find Java in registry
@@ -143,32 +141,28 @@ Function Get-Java
 
     Write-Verbose "Java detected at '$javaCMD'"
 
-    if (-not (Confirm-JavaVersion -Path $javaCMD)) {  Write-Error "This instance of Java is not supported"; return $null }
+    $javaVersion = Get-JavaVersion -Path $javaCMD
+    if (-not $javaVersion.isValid) { Write-Error "This instance of Java is not supported"; return $null }
 
-    # Shell arguments for the Neo4jServer and Arbiter classes
+    # Shell arguments for the Neo4jServer
     $ShellArgs = @()
     if ($PsCmdlet.ParameterSetName -eq 'ServerInvoke')
     {
       $serverMainClass = ''
-      if ($Neo4jServer.ServerType -eq 'Enterprise') { $serverMainClass = 'org.neo4j.server.enterprise.EnterpriseEntryPoint' }
       if ($Neo4jServer.ServerType -eq 'Community') { $serverMainClass = 'org.neo4j.server.CommunityEntryPoint' }
-      if ($Neo4jServer.DatabaseMode.ToUpper() -eq 'ARBITER') { $serverMainClass = 'org.neo4j.server.enterprise.ArbiterEntryPoint' }
 
       if ($serverMainClass -eq '') { Write-Error "Unable to determine the Server Main Class from the server information"; return $null }
 
       # Build the Java command line
-      $ClassPath="$($Neo4jServer.Home)/lib/*;$($Neo4jServer.Home)/plugins/*"
-      $ShellArgs = @("-cp `"$($ClassPath)`""`
-                    ,'-server' `
-                    ,'-Dlog4j.configuration=file:conf/log4j.properties' `
-                    ,'-Dneo4j.ext.udc.source=zip-powershell' `
-                    ,'-Dorg.neo4j.cluster.logdirectory=data/log' `
-      )
+      $ClassPath = "$($Neo4jServer.Home)/lib/*;$($Neo4jServer.Home)/plugins/*"
+      $ShellArgs = @("-cp `"$($ClassPath)`"" `
+          ,'-server' `
+        )
 
       # Parse Java config settings - Heap initial size
       $option = (Get-Neo4jSetting -Name 'dbms.memory.heap.initial_size' -Neo4jServer $Neo4jServer)
       if ($option -ne $null) {
-        $mem="$($option.Value)"
+        $mem = "$($option.Value)"
         if ($mem -notmatch '[\d]+[gGmMkK]') {
           $mem += "m"
           Write-Warning @"
@@ -179,14 +173,14 @@ WARNING: dbms.memory.heap.initial_size will require a unit suffix in a
          dbms.memory.heap.initial_size=512m
                                           ^
 "@
-          }
+        }
         $ShellArgs += "-Xms$mem"
       }
 
       # Parse Java config settings - Heap max size
       $option = (Get-Neo4jSetting -Name 'dbms.memory.heap.max_size' -Neo4jServer $Neo4jServer)
       if ($option -ne $null) {
-        $mem="$($option.Value)"
+        $mem = "$($option.Value)"
         if ($mem -notmatch '[\d]+[gGmMkK]') {
           $mem += "m"
           Write-Warning @"
@@ -197,7 +191,7 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
          dbms.memory.heap.max_size=512m
                                       ^
 "@
-          }
+        }
         $ShellArgs += "-Xmx$mem"
       }
 
@@ -207,61 +201,49 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
 
       # Parse Java config settings - GC
       $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.enabled' -Neo4jServer $Neo4jServer)
-      if (($option -ne $null) -and ($option.Value.ToLower() -eq 'true')) {
-        $ShellArgs += "-Xloggc:`"$($Neo4jServer.Home)/gc.log`""
-
+      if (($option -ne $null) -and ($option.value.ToLower() -eq 'true')) {
         $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.options' -Neo4jServer $Neo4jServer)
-        if ($option -eq $null) {
-          $ShellArgs += @('-XX:+PrintGCDetails',
-                          '-XX:+PrintGCDateStamps',
-                          '-XX:+PrintGCApplicationStoppedTime',
-                          '-XX:+PrintPromotionFailure',
-                          '-XX:+PrintTenuringDistribution',
-                          '-XX:+UseGCLogFileRotation')
+        if ($option -ne $null) {
+          $gcOptions = $option.value
         } else {
-          # The GC options _should_ be space delimited
-          $ShellArgs += ($option.Value -split ' ')
+          $gcOptions = '-Xlog:gc*,safepoint,age*=trace'
+        }
+        # GC file name should be escaped on Windows because of ':' usage as part of absolute name
+        $gcFile = "\`"" + "$($Neo4jServer.LogDir)/gc.log" + "\`""
+        $gcOptions += ":file=$( $gcFile )::"
+
+        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
+        if ($option -ne $null) {
+          $gcOptions += "filecount=$( $option.value )"
+        } else {
+          $gcOptions += "filecount=5"
         }
 
         $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.size' -Neo4jServer $Neo4jServer)
         if ($option -ne $null) {
-          $ShellArgs += "-XX:GCLogFileSize=$($option.value)"
+          $gcOptions += ",filesize=$( $option.value )"
         } else {
-          $ShellArgs += "-XX:GCLogFileSize=20m"
+          $gcOptions += ",filesize=20m"
         }
-
-        $option = (Get-Neo4jSetting -Name 'dbms.logs.gc.rotation.keep_number' -Neo4jServer $Neo4jServer)
-        if ($option -ne $null) {
-          $ShellArgs += "-XX:NumberOfGCLogFiles=$($option.value)"
-        } else {
-          $ShellArgs += "-XX:NumberOfGCLogFiles=5"
-        }
+        $ShellArgs += $gcOptions
       }
-        $ShellArgs += @("-Dfile.encoding=UTF-8",
-                        $serverMainClass,
-                        "--config-dir=`"$($Neo4jServer.ConfDir)`"",
-                        "--home-dir=`"$($Neo4jServer.Home)`"")
+      $ShellArgs += @("-Dfile.encoding=UTF-8",
+        $serverMainClass,
+        "--config-dir=`"$($Neo4jServer.ConfDir)`"",
+        "--home-dir=`"$($Neo4jServer.Home)`"")
     }
 
-    # Shell arguments for the utility classes e.g. Import, Shell
+    # Shell arguments for the utility classes e.g. Admin
     if ($PsCmdlet.ParameterSetName -eq 'UtilityInvoke')
     {
       # Generate the commandline args
-      $ClassPath = ''
-      # Enumerate all JARS in the lib directory and add to the class path
-      Get-ChildItem -Path (Join-Path  -Path $Neo4jServer.Home -ChildPath 'lib') | Where-Object { $_.Extension -eq '.jar'} | % {
-        $ClassPath += "`"$($_.FullName)`";"
-      }
-      # Enumerate all JARS in the bin directory and add to the class path
-      Get-ChildItem -Path (Join-Path  -Path $Neo4jServer.Home -ChildPath 'bin') | Where-Object { $_.Extension -eq '.jar'} | % {
-        $ClassPath += "`"$($_.FullName)`";"
-      }
-      if ($ClassPath.Length -gt 0) { $ClassPath = $ClassPath.SubString(0, $ClassPath.Length-1) } # Strip the trailing semicolon if needed
+      $ClassPath = "$($Neo4jServer.Home)/lib/*;$($Neo4jServer.Home)/bin/*"
 
       $ShellArgs = @()
-      $ShellArgs += @("-classpath $($EnvClassPrefix);$ClassPath",
-                      "-Dbasedir=`"$($Neo4jServer.Home)`"", `
-                      '-Dfile.encoding=UTF-8')
+      $ShellArgs += @("-XX:+UseParallelGC",
+        "-classpath `"$($EnvClassPrefix);$ClassPath`"",
+        "-Dbasedir=`"$($Neo4jServer.Home)`"",`
+           '-Dfile.encoding=UTF-8')
 
       # Determine user configured heap size.
       $HeapSize = Get-Neo4jEnv 'HEAP_SIZE'
@@ -273,11 +255,14 @@ WARNING: dbms.memory.heap.max_size will require a unit suffix in a
       # Add the starting class
       $ShellArgs += @($StartingClass)
     }
-
-    Write-Output @{'java' = $javaCMD; 'args' = $ShellArgs}
+	ForEach ($arg in $Neo4jServer.AdditionalArguments)
+	{
+		$ShellArgs += $arg
+	}
+    Write-Output @{ 'java' = $javaCMD; 'args' = $ShellArgs }
   }
 
-  End
+  end
   {
   }
 }
