@@ -1,7 +1,25 @@
+# Copyright (c) 2002-2020 "Neo4j,"
+# Neo4j Sweden AB [http://neo4j.com]
+#
+# This file is part of Neo4j.
+#
+# Neo4j is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
 $here = Split-Path -Parent $MyInvocation.MyCommand.Path
-$sut = (Split-Path -Leaf $MyInvocation.MyCommand.Path).Replace(".Tests.", ".")
+$sut = (Split-Path -Leaf $MyInvocation.MyCommand.Path).Replace(".Tests.",".")
 $common = Join-Path (Split-Path -Parent $here) 'Common.ps1'
-. $common
+.$common
 
 Import-Module "$src\Neo4j-Management.psm1"
 
@@ -18,7 +36,7 @@ InModuleScope Neo4j-Management {
     Mock Get-ItemProperty { $null } -ParameterFilter {
       $Path -like 'Registry::*\JavaSoft\Java Runtime Environment*'
     }
-    Mock Confirm-JavaVersion { $true }
+    Mock Get-JavaVersion { @{ 'isValid' = $true; 'isJava11' = $true } }
 
     # Java Detection Tests
     Context "Valid Java install in JAVA_HOME environment variable" {
@@ -34,7 +52,7 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Legacy Java install in JAVA_HOME environment variable" {
-      Mock Confirm-JavaVersion -Verifiable { $false }
+      Mock Get-JavaVersion -Verifiable { @{ 'isValid' = $false; 'isJava11' = $false } }
 
       It "should throw if java is not supported" {
         { Get-Java -ErrorAction Stop } | Should Throw
@@ -58,10 +76,10 @@ InModuleScope Neo4j-Management {
       Mock Test-Path -Verifiable { return $true } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment')
       }
-      Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9'} } -ParameterFilter {
+      Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9' } } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment')
       }
-      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = $javaHome} } -ParameterFilter {
+      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = $javaHome } } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\Wow6432Node\JavaSoft\Java Runtime Environment\9.9')
       }
 
@@ -81,10 +99,10 @@ InModuleScope Neo4j-Management {
       Mock Test-Path -Verifiable { return $true } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment')
       }
-      Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9'} } -ParameterFilter {
+      Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9' } } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment')
       }
-      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = $javaHome} } -ParameterFilter {
+      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = $javaHome } } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment\9.9')
       }
 
@@ -105,10 +123,10 @@ InModuleScope Neo4j-Management {
       Mock Test-Path -Verifiable { return $true } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment')
       }
-      Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9'} } -ParameterFilter {
+      Mock Get-ItemProperty -Verifiable { return @{ 'CurrentVersion' = '9.9' } } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment')
       }
-      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = $javaHome} } -ParameterFilter {
+      Mock Get-ItemProperty -Verifiable { return @{ 'JavaHome' = $javaHome } } -ParameterFilter {
         ($Path -eq 'Registry::HKLM\SOFTWARE\JavaSoft\Java Runtime Environment\9.9')
       }
 
@@ -147,8 +165,8 @@ InModuleScope Neo4j-Management {
     }
 
     # ForServer tests
-    Context "Server Invoke - Community v3.0" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community'
+    Context "Server Invoke - Community v4.0" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
@@ -158,31 +176,9 @@ InModuleScope Neo4j-Management {
       }
     }
 
-    Context "Server Invoke - Enterprise v3.0" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Enterprise'
-
-      $result = Get-Java -ForServer -Neo4jServer $serverObject
-      $resultArgs = ($result.args -join ' ')
-
-      It "should have main class of org.neo4j.server.enterprise.EnterpriseEntryPoint" {
-        $resultArgs | Should Match ([regex]::Escape(' org.neo4j.server.enterprise.EnterpriseEntryPoint'))
-      }
-    }
-
-    Context "Server Invoke - Enterprise Arbiter v3.0" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Enterprise' -DatabaseMode 'Arbiter'
-
-      $result = Get-Java -ForServer -Neo4jServer $serverObject
-      $resultArgs = ($result.args -join ' ')
-
-      It "should have main class of org.neo4j.server.enterprise.EnterpriseEntryPoint" {
-        $resultArgs | Should Match ([regex]::Escape(' org.neo4j.server.enterprise.ArbiterEntryPoint'))
-      }
-    }
-
     Context "Server Invoke - Should set heap size" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
-        -NeoConfSettings 'dbms.memory.heap.initial_size=123k','dbms.memory.heap.max_size=234g'
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
+         -NeoConfSettings 'dbms.memory.heap.initial_size=123k','dbms.memory.heap.max_size=234g'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
@@ -197,8 +193,8 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Server Invoke - Should default heap size unit to megabytes" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
-        -NeoConfSettings 'dbms.memory.heap.initial_size=123','dbms.memory.heap.max_size=234'
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
+         -NeoConfSettings 'dbms.memory.heap.initial_size=123','dbms.memory.heap.max_size=234'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
@@ -213,62 +209,50 @@ InModuleScope Neo4j-Management {
     }
 
     Context "Server Invoke - Enable Default GC Logs" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
-        -NeoConfSettings 'dbms.logs.gc.enabled=true'
+      Mock Get-JavaVersion { @{ 'isValid' = $true; 'isJava11' = $false } }
+      
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
+         -NeoConfSettings 'dbms.logs.gc.enabled=true'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
 
-      It "should set GCLogfile" {
-        $resultArgs | Should Match ([regex]::Escape(' -Xloggc:'))
+      It "should set default options" {
+        $resultArgs | Should Match ([regex]::Escape('-Xlog:gc*,safepoint,age*=trace'))
       }
 
-      It "should set GCLogFileSize" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:GCLogFileSize='))
+      It "should set gc log file size" {
+        $resultArgs | Should Match ([regex]::Escape('filesize='))
       }
 
-      It "should set NumberOfGCLogFiles" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:NumberOfGCLogFiles='))
+      It "should set number of gc logs" {
+        $resultArgs | Should Match ([regex]::Escape('filecount='))
       }
 
-      It "should set PrintGCDetails" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintGCDetails'))
-      }
-
-      It "should set PrintGCDateStamps" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintGCDateStamps'))
-      }
-
-      It "should set PrintGCApplicationStoppedTime" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintGCApplicationStoppedTime'))
-      }
-
-      It "should set PrintPromotionFailure" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintPromotionFailure'))
-      }
-
-      It "should set PrintTenuringDistribution" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:+PrintTenuringDistribution'))
+      It "should set file location" {
+        $resultArgs | Should Match ([regex]::Escape('file='))
       }
     }
 
     Context "Server Invoke - Enable Specific GC Logs" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
-        -NeoConfSettings 'dbms.logs.gc.enabled=true','dbms.logs.gc.options=key1=value1 key2=value2'
+      Mock Get-JavaVersion { @{ 'isValid' = $true; 'isJava11' = $false } }
+
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
+         -NeoConfSettings 'dbms.logs.gc.enabled=true','dbms.logs.gc.options=key1=value1 key2=value2'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
       $resultArgs = ($result.args -join ' ')
 
-      It "should set GCLogfile" {
-        $resultArgs | Should Match ([regex]::Escape(' -Xloggc:'))
+      It "should set gc file" {
+        $resultArgs | Should Match ([regex]::Escape('file='))
       }
 
-      It "should set GCLogFileSize" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:GCLogFileSize='))
+      It "should set gc log file size" {
+        $resultArgs | Should Match ([regex]::Escape('filesize='))
       }
 
-      It "should set NumberOfGCLogFiles" {
-        $resultArgs | Should Match ([regex]::Escape(' -XX:NumberOfGCLogFiles='))
+      It "should set number of gc log files" {
+        $resultArgs | Should Match ([regex]::Escape('filecount='))
       }
 
       It "should set specific options" {
@@ -285,10 +269,10 @@ InModuleScope Neo4j-Management {
       $resultArgs = ($result.args -join ' ')
 
       It "should have jars from bin" {
-        $resultArgs | Should Match ([regex]::Escape('bin1.jar"'))
+        $resultArgs | Should Match ([regex]::Escape("$($serverObject.Home)/bin/*"))
       }
       It "should have jars from lib" {
-        $resultArgs | Should Match ([regex]::Escape('lib1.jar"'))
+        $resultArgs | Should Match ([regex]::Escape("$($serverObject.Home)/lib/*"))
       }
       It "should have correct Starting Class" {
         $resultArgs | Should Match ([regex]::Escape(' someclass'))
@@ -303,10 +287,10 @@ InModuleScope Neo4j-Management {
       $resultArgs = ($result.args -join ' ')
 
       It "should have jars from bin" {
-        $resultArgs | Should Match ([regex]::Escape('bin1.jar"'))
+        $resultArgs | Should Match ([regex]::Escape("$($serverObject.Home)/bin/*"))
       }
       It "should have jars from lib" {
-        $resultArgs | Should Match ([regex]::Escape('lib1.jar"'))
+        $resultArgs | Should Match ([regex]::Escape("$($serverObject.Home)/lib/*"))
       }
       It "should have correct Starting Class" {
         $resultArgs | Should Match ([regex]::Escape(' someclass'))
@@ -319,23 +303,43 @@ InModuleScope Neo4j-Management {
       }
     }
 
-	Context "Server Invoke - Should handle paths with spaces" {
-      $serverObject = global:New-MockNeo4jInstall -ServerVersion '3.0' -ServerType 'Community' `
-	    -RootDir 'TestDrive:\Neo4j Home' `
-        -NeoConfSettings 'dbms.logs.gc.enabled=true'
+    Context "Utility Invoke - Should provide parallel collector option" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '99.99' -ServerType 'Community'
+
+      $result = Get-Java -ForUtility -StartingClass 'someclass' -Neo4jServer $serverObject -ErrorAction Stop
+      $resultArgs = ($result.args -join ' ')
+
+      It "should have parallel collector java option" {
+        $resultArgs | Should Match ([regex]::Escape('-XX:+UseParallelGC'))
+      }
+    }
+
+    Context "Server Invoke - Should handle paths with spaces" {
+      $serverObject = global:New-MockNeo4jInstall -ServerVersion '4.0' -ServerType 'Community' `
+         -RootDir 'TestDrive:\Neo4j Home' `
+         -NeoConfSettings 'dbms.logs.gc.enabled=true'
 
       $result = Get-Java -ForServer -Neo4jServer $serverObject
-	  $argList = $result.args
+      $argList = $result.args
 
-	  It "should have literal quotes around config path" {
-		$argList -contains "--config-dir=`"TestDrive:\Neo4j Home\conf`"" | Should Be True
-	  }
-	  It "should have literal quotes around home path" {
-		$argList -contains "--home-dir=`"TestDrive:\Neo4j Home`"" | Should Be True
-	  }
-	  It "should have literal quotes around gclog path" {
-		$argList -contains "-Xloggc:`"TestDrive:\Neo4j Home/gc.log`"" | Should Be True
-	  }
+      It "should have literal quotes around config path" {
+        $argList -contains "--config-dir=`"TestDrive:\Neo4j Home\conf`"" | Should Be True
+      }
+      It "should have literal quotes around home path" {
+        $argList -contains "--home-dir=`"TestDrive:\Neo4j Home`"" | Should Be True
+      }
+      It "should have literal quotes around gclog path" {
+        $argList -contains
+        "-Xlog:gc*,safepoint,age*=trace:file=\""TestDrive:\Neo4j Home\logs/gc.log\""::filecount=5,filesize=20m"| Should Be True
+      }
+    }
+
+    Context "Additional Arguments test" {
+      It "Should add additional argument to java arguments" {
+        $serverObject = global:New-MockNeo4jInstall -AdditionalArguments @("foo")
+        $result = Get-Java -ForServer -Neo4jServer $serverObject
+        $result.args -contains "foo" | Should Be True
+      }
     }
   }
 }
