@@ -5,41 +5,22 @@ test_description="Test Java arguments"
 . ./lib/sharness.sh
 fake_install
 
+test_expect_success "should set heap size constraints when checking version" "
+  clear_config &&
+  set_config 'dbms.memory.heap.initial_size' '512m' neo4j.conf &&
+  set_config 'dbms.memory.heap.max_size' '1024m' neo4j.conf &&
+  neo4j-home/bin/neo4j version || true &&
+  test_expect_java_arg '-Xms512m' &&
+  test_expect_java_arg '-Xmx1024m'
+"
+
 for run_command in run_console run_daemon; do
   clear_config
-
-  test_expect_success "should specify -server" "
-    ${run_command} &&
-    test_expect_java_arg '-server'
-  "
-
-  test_expect_success "should add additional options from wrapper conf" "
-    set_config 'dbms.jvm.additional' '-XX:+UseG1GC', neo4j-wrapper.conf &&
-    ${run_command} &&
-    test_expect_java_arg '-XX:+UseG1GC'
-  "
 
   test_expect_success "should add additional options" "
     set_config 'dbms.jvm.additional' '-XX:+UseG1GC', neo4j.conf &&
     ${run_command} &&
     test_expect_java_arg '-XX:+UseG1GC'
-  "
-
-  test_expect_success "should set heap size constraints from wrapper conf" "
-    clear_config &&
-    set_config 'dbms.memory.heap.initial_size' '1g' neo4j-wrapper.conf &&
-    set_config 'dbms.memory.heap.max_size' '2g' neo4j-wrapper.conf &&
-    ${run_command} &&
-    test_expect_java_arg '-Xms1g' &&
-    test_expect_java_arg '-Xmx2g'
-  "
-  test_expect_success "should default heap size unit to megabytes" "
-    clear_config &&
-    set_config 'dbms.memory.heap.initial_size' '333' neo4j-wrapper.conf &&
-    set_config 'dbms.memory.heap.max_size' '666' neo4j-wrapper.conf &&
-    ${run_command} &&
-    test_expect_java_arg '-Xms333m' &&
-    test_expect_java_arg '-Xmx666m'
   "
 
   test_expect_success "should set heap size constraints" "
@@ -51,13 +32,23 @@ for run_command in run_console run_daemon; do
     test_expect_java_arg '-Xmx678g'
   "
 
-  test_expect_success "should set heap size default unit" "
-    clear_config &&
-    set_config 'dbms.memory.heap.initial_size' '123' neo4j.conf &&
-    set_config 'dbms.memory.heap.max_size' '678' neo4j.conf &&
+  test_expect_success "should append additional options" "
+    set_config 'dbms.jvm.additional' '-XX:+UseG1GC', neo4j.conf &&
+    set_config 'dbms.jvm.additional' '-XX:+UnlockCommercialFeatures', neo4j.conf &&
     ${run_command} &&
-    test_expect_java_arg '-Xms123m' &&
-    test_expect_java_arg '-Xmx678m'
+    test_expect_java_arg '-XX:+UseG1GC' &&
+    test_expect_java_arg '-XX:+UnlockCommercialFeatures'
+  "
+
+  test_expect_success "should set heap size to last setting in file" "
+    clear_config &&
+    set_config 'dbms.memory.heap.initial_size' '512m' neo4j.conf &&
+    set_config 'dbms.memory.heap.initial_size' '777m' neo4j.conf &&
+    set_config 'dbms.memory.heap.max_size' '1024m' neo4j.conf &&
+    set_config 'dbms.memory.heap.max_size' '7474m' neo4j.conf &&
+    ${run_command} &&
+    test_expect_java_arg '-Xms777m' &&
+    test_expect_java_arg '-Xmx7474m'
   "
 
   test_expect_success "should invoke main class" "
@@ -88,7 +79,7 @@ for run_command in run_console run_daemon; do
     clear_config &&
     set_config 'dbms.logs.gc.enabled' 'true' neo4j.conf &&
     ${run_command} &&
-    test_expect_java_arg '-Xloggc:$(neo4j_home)/logs/gc.log'
+    test_expect_java_arg 'file=$(neo4j_home)/logs/gc.log'
   "
 
   test_expect_success "should put gc log into configured logs directory" "
@@ -97,22 +88,22 @@ for run_command in run_console run_daemon; do
     set_config 'dbms.logs.gc.enabled' 'true' neo4j.conf &&
     set_config 'dbms.directories.logs' 'some-other-logs' neo4j.conf &&
     ${run_command} &&
-    test_expect_java_arg '-Xloggc:$(neo4j_home)/some-other-logs/gc.log'
+    test_expect_java_arg 'file=$(neo4j_home)/some-other-logs/gc.log'
   "
 
   test_expect_success "should set gc logging options when gc log is enabled" "
     clear_config &&
     set_config 'dbms.logs.gc.enabled' 'true' neo4j.conf &&
-    set_config 'dbms.logs.gc.options' '-XX:+PrintSomeOtherGCOption' neo4j.conf &&
+    set_config 'dbms.logs.gc.options' '-Xlog:gc+class*=debug' neo4j.conf &&
     ${run_command} &&
-    test_expect_java_arg '-XX:+PrintSomeOtherGCOption'
+    test_expect_java_arg '-Xlog:gc+class*=debug'
   "
 
   test_expect_success "should set default gc logging options when none are provided" "
     clear_config &&
     set_config 'dbms.logs.gc.enabled' 'true' neo4j.conf &&
     ${run_command} &&
-    test_expect_java_arg '-XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCApplicationStoppedTime -XX:+PrintPromotionFailure -XX:+PrintTenuringDistribution'
+    test_expect_java_arg '-Xlog:gc*,safepoint,age*=trace'
   "
 
   test_expect_success "should set gc logging rotation options" "
@@ -122,7 +113,7 @@ for run_command in run_console run_daemon; do
     set_config 'dbms.logs.gc.enabled' 'true' neo4j.conf
 
     ${run_command} &&
-    test_expect_java_arg '-XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=8 -XX:GCLogFileSize=10m'
+    test_expect_java_arg 'file=$(neo4j_home)/logs/gc.log::filecount=8,filesize=10m'
   "
 
   test_expect_success "should pass config dir location" "
@@ -135,31 +126,17 @@ for run_command in run_console run_daemon; do
     test_expect_java_arg '--config-dir=/some/other/conf/dir'
   "
 
-  test_expect_success "should warn that neo4j-wrapper.conf is deprecated" "
-    set_config 'anything.at.all' 'value', neo4j-wrapper.conf &&
-    test_expect_stderr_matching \
-        'WARNING: neo4j-wrapper.conf is deprecated and support for it will be removed in a future
-         version of Neo4j; please move all your settings to neo4j.conf' \
-        ${run_command}
+  test_expect_success "should print error for missing unit for initial_size" "
+    clear_config &&
+    set_config 'dbms.memory.heap.initial_size' '123' neo4j.conf &&
+    test_expect_stderr_matching '^ERROR: dbms.memory.heap.initial_size' test_expect_code 1 ${run_command}
+  "
+
+  test_expect_success "should print error for missing unit for max_size" "
+    clear_config &&
+    set_config 'dbms.memory.heap.max_size' '123' neo4j.conf &&
+    test_expect_stderr_matching '^ERROR: dbms.memory.heap.max_size' test_expect_code 1 ${run_command}
   "
 done
-
-test_expect_success "should set heap size constraints when checking version from wrapper conf" "
-  clear_config &&
-  set_config 'dbms.memory.heap.initial_size' '512m' neo4j-wrapper.conf &&
-  set_config 'dbms.memory.heap.max_size' '1024m' neo4j-wrapper.conf &&
-  neo4j-home/bin/neo4j status || true &&
-  test_expect_java_arg '-Xms512m' &&
-  test_expect_java_arg '-Xmx1024m'
-"
-
-test_expect_success "should set heap size constraints when checking version" "
-  clear_config &&
-  set_config 'dbms.memory.heap.initial_size' '512m' neo4j.conf &&
-  set_config 'dbms.memory.heap.max_size' '1024m' neo4j.conf &&
-  neo4j-home/bin/neo4j status || true &&
-  test_expect_java_arg '-Xms512m' &&
-  test_expect_java_arg '-Xmx1024m'
-"
 
 test_done
